[gd_scene load_steps=3 format=3 uid="uid://diy7dm8wv1hs1"]

[ext_resource type="Script" uid="uid://coiasx8g77t7" path="res://Scenes/trey_ui.gd" id="1_vvg1x"]
[ext_resource type="Script" uid="uid://dgkvyafk5erii" path="res://Scenes/TreySlot.gd" id="2_lrb4w"]

[node name="TrayUi" type="HBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
alignment = 1
script = ExtResource("1_vvg1x")

[node name="Slot0" type="Button" parent="."]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2
script = ExtResource("2_lrb4w")

[node name="Slot1" type="Button" parent="."]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2
script = ExtResource("2_lrb4w")

[node name="Slot2" type="Button" parent="."]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2
script = ExtResource("2_lrb4w")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(54.3, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="CombineButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(210.98, 65.44)
layout_mode = 2
text = "Combine"
